# fastapi_notesmith_tutorial

./: .env.template  .gitignore  README.md  alembic.ini  pyproject.toml
CourseMDs/: 00-introduction.md  01-project-setup.md  02-fastapi-fundamentals.md  03-pydantic-schemas.md  04-database-setup.md  05-alembic-migrations.md  06-crud-operations.md  07-authentication.md  08-dependency-injection.md  09-anthropic-sdk.md  10-testing.md  11-capstone-project.md  11-mcp-integration.md  12-capstone-project.md
alembic/: env.py
alembic/versions/: b4ab9e0c6a84_create_users_and_notes_tables.py
src/notesmith/: config.py  database.py  exceptions.py  main.py  middleware.py
src/notesmith/ai/: router.py  schemas.py  service.py
src/notesmith/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
src/notesmith/mcp/: client.py  router.py  schemas.py  server.py
src/notesmith/notes/: 02-fastapi-fundamentals-code.txt  models.py  router.py  schemas.py  service.py
tests/: conftest.py  test_ai.py  test_auth.py  test_mcp.py  test_notes.py
